Fixed bad positioning and overflow in explore view + small bugs + added thumbnail

--- a/caravel/assets/visualizations/mapbox.css
+++ b/caravel/assets/visualizations/mapbox.css
@@ -1,11 +1,16 @@
-.slice_container {
+div.widget .slice_container {
     cursor: grab;
     cursor: -moz-grab;
     cursor: -webkit-grab;
+    overflow: hidden;
 }
 
-.slice_container:active {
+div.widget .slice_container:active {
     cursor: grabbing;
     cursor: -moz-grabbing;
     cursor: -webkit-grabbing;
+}
+
+.slice_container div {
+    padding-top: 0px;
 }
